# rustydbdump

./: .gitignore  Cargo.toml  README.md  query.sql.sample  settings.json.sample
src/: main.rs
