[package]
name = "rustydbdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = { version="0.12.2",features=["chrono"]}
async-std = { version="1",features=["attributes"] }
anyhow = "1.0.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_xlsxwriter = "0.40.0"
